--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,8 +1,11 @@
 :root {
   --color-bg-primary: #fff;
   --color-primary: #000;
-  --color-secondary: #e6a008;
-  --color-active: rgb(25, 216, 0);
+  --color-secondary: #ffcc33;
+  --color-secondary: #f3bc16;
+  --color-tertiary: #0195ff;
+  --color-tertiary: #0085e4;
+  --color-active: #00c677;
   --color-logo: #000;
 }
 
