--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -113,7 +113,25 @@
 .footer {
   text-align: center;
   padding: 2rem;
-  border-top: 1px solid var(--color-primary);
+  border-top: 1px solid #444;
+
+  &__credits {
+    font-size: 1.4rem;
+
+    &__link,
+    &__link:link,
+    &__link:visited {
+      text-decoration: none;
+      color: var(--color-tertiary);
+    }
+
+    &__link:hover,
+    &__link:active,
+    &__link:focus {
+      color: var(--color-active);
+      outline: none;
+    }
+  }
 }
 
 
