--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,9 +1,9 @@
 :root {
   --color-bg-primary: #fff;
-  --color-primary: #000;
-  --color-secondary: #ffcc33;
+  --color-primary: #222;
+  --color-grey-1: #444;
+  --color-grey-2: #999;
   --color-secondary: #f3bc16;
-  --color-tertiary: #0195ff;
   --color-tertiary: #0085e4;
   --color-active: #00c677;
   --color-logo: #000;
