--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,12 @@
+.header {
+  width: 100%;
+  margin-top: 1.6rem;
+
+  @media screen and (min-width: $bp-900) {
+    margin: 3.2rem 0;
+  }
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -37,11 +46,13 @@ main {
 
 .article {
   padding: .8rem 2.4rem 2.4rem 2.4rem;
+  
+  @media screen and (min-width: $bp-900) {
+    margin-left: 1.5rem;
+  }
 }
 
 .footer {
-
-  @media screen and (min-width: $bp-900) {
-    margin-top: 3.2rem;
-  }
+  margin-top: 5rem;
+  
 }
