--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -19,10 +19,6 @@ main {
   }
 }
 
-.section {
-
-}
-
 .showcase {
   display: flex;
   flex-direction: row;
@@ -53,6 +49,6 @@ main {
 }
 
 .footer {
+  width: 100%;
   margin-top: 5rem;
-  
 }
