--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,6 +3,7 @@
   --color-primary: #222;
   --color-grey-1: #444;
   --color-grey-2: #999;
+  --color-grey-3: #e3e3e3;
   --color-secondary: #f3bc16;
   --color-tertiary: #0085e4;
   --color-active: #00c677;
