--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -104,6 +104,80 @@
   }
 }
 
+.scroll-down {
+
+  &__box {
+    transform: scale(.7);
+    animation: pulsateArrow 1s linear infinite alternate;
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    background: transparent;
+    border: none;
+
+    @media screen and (min-width: $bp-900) {
+      display: none;
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    &:focus {
+      outline: none;
+    }
+
+  }
+
+  &__arrow {
+    align-self: center;
+    margin: 0 auto;
+    width: 9rem;
+    height: 4rem;
+    background: transparent;
+
+    &::before {
+      content: '';
+      display: block;
+      width: 5rem;
+      height: .6rem;
+      background-color: var(--color-grey-3);
+      border-top-left-radius: 3rem;
+      border-bottom-left-radius: 3rem;
+      transform: rotate(40deg);
+      transform-origin: right;
+      position: absolute;
+      top: 3rem;
+      left: 0;
+    }
+  
+    &::after {
+      content: '';
+      display: block;
+      width: 5.1rem;
+      height: .6rem;
+      background-color: var(--color-grey-3);
+      border-top-right-radius: 3rem;
+      border-bottom-right-radius: 3rem;
+      transform: rotate(320deg) translate(-.3rem, -.2rem);
+      transform-origin: left;
+      position: absolute;
+      top: 3rem;
+      left: 5rem;
+    }
+  }
+
+  &__arrow:last-of-type {
+    transform: translateY(-2.3rem);
+  }
+}
+
+@keyframes pulsateArrow {
+  0% {opacity:.4;}
+  100% {opacity:1;}
+}
+
+
 .pose {
   display: none;
 
