--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,5 +1,5 @@
 .header {
-  width: 100%;
+  max-width: 100%;
   margin-top: 1.6rem;
 
   @media screen and (min-width: $bp-900) {
@@ -49,6 +49,6 @@ main {
 }
 
 .footer {
-  width: 100%;
-  margin-top: 5rem;
+  max-width: 100%;
+  margin-top: 7rem;
 }
