--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -104,6 +104,63 @@
   }
 }
 
+.pose {
+  display: none;
+
+  &__intro {
+    font-size: 1.6rem;
+    margin-top: 1.6rem;
+    color: var(--color-grey-2);
+    text-transform: uppercase;
+  }
+ 
+  &__title {
+    font-size: 2.6rem;
+    margin-top: .8rem;
+
+    @media screen and (min-width: $bp-900) {
+      font-size: 2.8rem;
+    }
+  }
+
+  &__description {
+    font-size: 1.6rem;
+    margin-top: 2.4rem;
+
+    @media screen and (min-width: $bp-900) {
+      font-size: 1.8rem;
+    }
+  }
+
+  &--active {
+    display: block;
+  }
+}
+
+.footer {
+  text-align: center;
+  padding: 2.4rem;
+  background-color: var(--color-secondary);
+
+  &__credits {
+    font-size: 1.4rem;
+
+    &__link,
+    &__link:link,
+    &__link:visited {
+      text-decoration: none;
+      color: var(--color-tertiary);
+    }
+
+    &__link:hover,
+    &__link:active,
+    &__link:focus {
+      color: var(--color-active);
+      outline: none;
+    }
+  }
+}
+
 .scroll-down {
 
   &__box {
@@ -186,39 +243,6 @@
   100% {opacity:1;}
 }
 
-.pose {
-  display: none;
-
-  &__intro {
-    font-size: 1.6rem;
-    margin-top: 1.6rem;
-    color: var(--color-grey-2);
-    text-transform: uppercase;
-  }
- 
-  &__title {
-    font-size: 2.6rem;
-    margin-top: .8rem;
-
-    @media screen and (min-width: $bp-900) {
-      font-size: 2.8rem;
-    }
-  }
-
-  &__description {
-    font-size: 1.6rem;
-    margin-top: 2.4rem;
-
-    @media screen and (min-width: $bp-900) {
-      font-size: 1.8rem;
-    }
-  }
-
-  &--active {
-    display: block;
-  }
-}
-
 .scroll-up {
 
   &__box {
@@ -297,29 +321,6 @@
   }
 }
 
-.footer {
-  text-align: center;
-  padding: 2.4rem;
-  border-top: 1px solid var(--color-secondary);
-
-  &__credits {
-    font-size: 1.4rem;
-
-    &__link,
-    &__link:link,
-    &__link:visited {
-      text-decoration: none;
-      color: var(--color-tertiary);
-    }
-
-    &__link:hover,
-    &__link:active,
-    &__link:focus {
-      color: var(--color-active);
-      outline: none;
-    }
-  }
-}
 
 .isVisible {
   visibility: visible;
