--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -166,7 +166,7 @@
   &__box {
     transform: scale(.6);
     animation: pulsateArrow 1.2s linear infinite alternate;
-    position: absolute;
+    position: fixed;
     bottom: 1rem;
     right: 1rem;
     background: transparent;
