--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -15,14 +15,22 @@
 }
 
 .showcase {
-  height: 60vh;
+  height: 50vh;
   max-height: 50rem;
   padding: 0 2.4rem;
+
+  @media screen and (min-width: $bp-900) {
+    height: 60vh;
+  }
 
   &__imgContainer {
     order: 2;
     max-width: 670px;
-    height: 100%;
+    height: 90%;
+
+    @media screen and (min-width: $bp-900) {
+      height: 100%;
+    }
   }
 
   &__image {
